Fix: Add Screen button was visible on Run screen.

--- a/web/src-static/theme-designer.less
+++ b/web/src-static/theme-designer.less
@@ -786,6 +786,7 @@
 }
 
 #run-screen {
+    z-index: 1001; /* more than add-screen-button */
     background: rgba(0, 0, 0, 0.9);
 }
  
